2006-04-01  Johan Dahlin  <johan@gnome.org>

	* codegen/h2def.py (proto_pat): Allow whitespace before
	last parenthesis. Fixes #317124

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk.defs (GtkSpinButton.input, GtkEditable.do_insert_text) 
	(GtkEditable.get_selection_bounds,
	GtkMenuItem.toggle_size_request): Add (direction ...) specifiers
	to these virtuals.  Probably more of these are missing, though.

	* codegen/codegen.py,
	* codegen/definitions.py,
	* codegen/reversewrapper.py:
	Add support for int* and double* (and basic infrastructure to
	support other types in the future) parameters for "reverse
	wrappers".  To use this feature one needs to help the
	codegenerator by adding (direction "in") or (direction "inout") to
	the parameter definitions as appropriate.  Fixes #335964.

2006-04-01  John Finlay  <finlay@moerari.com>

	reviewed by: Johan

	* gtk/gdk.defs:
	* gtk/gtk.defs:
	* gtk/gtk.override:
	* gtk/gtktextview.override:
	* gtk/gtktreeview.override:
	* gtk/gtkwidget.override:
	Add missing bindings, fixes #316881

2006-04-01  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.defs: Remove display_open_default_libgtk_only,
	it should not be wrapped.
	Fixes #321476

2006-04-01  Marco Cabizza  <marco87@gmail.com>

	reviewed by: Johan

	* gtk/gdk.defs:
	add gdk_screen_get_rgba_colormap and gdk_screen_get_rgba_visual,
	Fixes 328996

2006-04-01  Johan Dahlin  <johan@gnome.org>

	* gtk/gtkmodule.c: (init_gtk):
	* pangomodule.c: (initpango):
	Set default encoding to utf-8 in pango instead of gtk.
	Fixes #328031

2006-04-01  Johan Dahlin  <johan@gnome.org>

	* Makefile.am:
	* configure.in:
	* dsextras.py:
	* gobject/Makefile.am:
	* gobject/gobjectmodule.c:
	* gobject/pygboxed.c:
	* gobject/pygenum.c:
	* gobject/pygflags.c:
	* gobject/pygiochannel.c:
	* gobject/pygmaincontext.c:
	* gobject/pygmainloop.c:
	* gobject/pygobject.c:
	* gobject/pygparamspec.c:
	* gobject/pygpointer.c:
	* gobject/pygsource.c:
	* gobject/pygtype.c:
	* gtk/Makefile.am: