@@ -1,3 +1,13 @@
+2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* examples/Makefile.am (EXTRA_DIST): Ship new editable interface example.
+
+	* examples/gobject/editable-interface.py: Add small example of
+	overriding GtkEditable interface method and chaining to parent.
+
+	* codegen/codegen.py: Bug 334986: "Make it possible to
+	re-implement interfaces and chain to parent impl."
+
 2006-04-01  Johan Dahlin  <johan@gnome.org>
 
 	* codegen/h2def.py (proto_pat): Allow whitespace before
@@ -16,7 +26,7 @@
 	Add support for int* and double* (and basic infrastructure to
 	support other types in the future) parameters for "reverse
 	wrappers".  To use this feature one needs to help the
-	codegenerator by adding (direction "in") or (direction "inout") to
+	codegenerator by adding (direction "out") or (direction "inout") to
 	the parameter definitions as appropriate.  Fixes #335964.
 
 2006-04-01  John Finlay  <finlay@moerari.com>
